<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:fillViewport="true">
    <FrameLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent" android:layout_height="match_parent"
            tools:context=".ui.dashboard.birth.SearchIdentityFragment">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        >
            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/first_name_input_layout"
                    android:paddingBottom="@dimen/padding_medium"
                    android:hint="@string/firstName_person">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/last_name_input_layout"
                    app:layout_constraintTop_toBottomOf="@+id/first_name_input_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingBottom="@dimen/padding_medium"
                    android:hint="@string/last_person">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/date_input_layout"
                    app:layout_constraintTop_toBottomOf="@+id/last_name_input_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingBottom="@dimen/padding_medium"
                    android:hint="@string/birth_date">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/birth_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/place_input_layout"
                    app:layout_constraintTop_toBottomOf="@+id/date_input_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingBottom="@dimen/padding_medium"
                    android:hint="@string/birth_location">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/birth_place"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/mather_name_input_layout"
                    app:layout_constraintTop_toBottomOf="@+id/place_input_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingBottom="@dimen/padding_medium"
                    android:hint="@string/name_mather">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mather_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/addr_input_layout"
                    app:layout_constraintTop_toBottomOf="@+id/mather_name_input_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingBottom="@dimen/padding_medium"
                    android:hint="@string/addr">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/work_input_layout"
                    app:layout_constraintTop_toBottomOf="@+id/addr_input_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingBottom="@dimen/padding_medium"
                    android:hint="@string/work">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/work"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cin_input_layout"
                    app:layout_constraintTop_toBottomOf="@+id/work_input_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingBottom="@dimen/padding_medium"
                    android:hint="@string/cin">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/date_conviction_input_layout"
                    app:layout_constraintTop_toBottomOf="@+id/cin_input_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingBottom="@dimen/padding_medium"
                    android:hint="@string/date_conviction">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/date_conviction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tribunal_input_layout"
                    app:layout_constraintTop_toBottomOf="@+id/date_conviction_input_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingBottom="@dimen/padding_medium"
                    android:hint="@string/tribunal">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tribunal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/offense_nature_input_layout"
                    app:layout_constraintTop_toBottomOf="@+id/tribunal_input_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingBottom="@dimen/padding_medium"
                    android:hint="@string/tribunal">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/offense_nature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</ScrollView>