<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:fillViewport="true">
    <FrameLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent" android:layout_height="match_parent"
            tools:context=".ui.dashboard.birth.SearchIdentityFragment">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60dp">
            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cin_input_layout"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingBottom="@dimen/padding_medium"
                    android:hint="@string/cin">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/cin_input_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/first_name_input_layout"
                    android:paddingBottom="@dimen/padding_medium"
                    android:hint="@string/firstName_person">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/last_name_input_layout"
                    app:layout_constraintTop_toBottomOf="@+id/first_name_input_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingBottom="@dimen/padding_medium"
                    android:hint="@string/last_person">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/date_input_layout"
                    app:layout_constraintTop_toBottomOf="@+id/last_name_input_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingBottom="@dimen/padding_medium"
                    android:hint="@string/birth_date">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/birth_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:id="@+id/btn_next"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:enabled="false"
                    android:layout_marginTop="40.2dp"
                    android:layout_marginLeft="28.7dp"
                    android:layout_marginRight="28.9dp"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search"
                    app:layout_constraintTop_toBottomOf="@+id/date_input_layout"
                    android:background="@drawable/bg_btn_login"
                    android:textColor="#fbfbfb"
                    android:textSize="15.4sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</ScrollView>